force-app/main/default/objects/sked__Job_Time_Constraint__c/sked__Job_Time_Constraint__c.object-meta.xml
<CustomObject>
    <description>This object is used to store constraints for time windows within which the job can be scheduled.</description>
    <label>Job Time Constraint</label>
    <nameField>
        <displayFormat>JTC-{00000}</displayFormat>
        <label>Job Time Constraint Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Time Constraints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>