force-app/main/default/objects/sked__Job_Time_Constraint__c/fields/sked__Is_In_Violation__c.field-meta.xml
<CustomField>
    <fullName>sked__Is_In_Violation__c</fullName>
    <formula>(sked__Job__r.sked__Start__c  &gt; sked__Start_Before__c) || 
(sked__Job__r.sked__Start__c  &lt; sked__Start_After__c ) ||
(sked__Job__r.sked__Finish__c &gt; sked__End_Before__c)</formula>
    <label>Is In Violation</label>
    <type>Checkbox</type>
</CustomField>