force-app/main/default/objects/sked__Job_Time_Constraint__c/fields/sked__Start_Before__c.field-meta.xml
<CustomField>
    <fullName>sked__Start_Before__c</fullName>
    <label>Start Before</label>
    <type>DateTime</type>
</CustomField>