force-app/main/default/objects/sked__Job_Time_Constraint__c/validationRules/sked__ValidType.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__ValidType</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL(sked__Type__c, &quot;SLA&quot;)), NOT(ISPICKVAL(sked__Type__c, &quot;Timeslot&quot;)))</errorConditionFormula>
    <errorDisplayField>sked__Type__c</errorDisplayField>
    <errorMessage>Type must be SLA or Timeslot</errorMessage>
</ValidationRule>